--- a/src/app.postcss
+++ b/src/app.postcss
@@ -1,3 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
 
-html, body { @apply h-full overflow-hidden; }
+html,
+body {
+	@apply h-full overflow-hidden;
+}
+input,
+textarea {
+	background: none;   
+    border-radius: 8px;
+    max-width: 100%;
+}
