--- a/src/app.postcss
+++ b/src/app.postcss
@@ -6,7 +6,10 @@ body {
 }
 input,
 textarea {
-	background: none;   
-    border-radius: 8px;
-    max-width: 100%;
+	background: none;
+	border-radius: 8px;
+	max-width: 100%;
+}
+a {
+	cursor: pointer;
 }
