--- a/src/style/theme.postcss
+++ b/src/style/theme.postcss
@@ -6,6 +6,7 @@
 	--theme-font-color-dark: 255 255 255;
 	--theme-rounded-base: 9999px;
 	--theme-rounded-container: 8px;
+	--theme-rounded-base: 8px;
 	--theme-border-base: 1px;
 	/* =~= Theme On-X Colors =~= */
 	--on-primary: 0 0 0;
