add codemirror, style preview and editor

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -1,4 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Source+Code+Pro:wght@400;600&display=swap');
+
+root {
+	--editor-bg: #1c1d20;
+}
 
 html,
 body {
@@ -12,4 +16,27 @@ textarea {
 }
 a {
 	cursor: pointer;
+}
+
+.markdown-body {
+	background: none;
+	--color-border-muted: #ffffff22;
+	--color-canvas-default: var(--color-surface-800);
+}
+.cm-editor {
+	height: 100%;
+	font-family: cursive, 'Source Code Pro', monospace;
+	background: var(--editor-bg);
+}
+.markdown-body code p {
+	margin: 0;
+}
+.editor-header .cm-gutterElement {
+	visibility: hidden;
+}
+.cm-content {
+	font-family: 'Source Code Pro', monospace;
+	letter-spacing: 0.025em;
+	line-height: 1.25;
+	font-size: 18px;
 }
