add view switcher

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -18,15 +18,18 @@ a {
 	cursor: pointer;
 }
 
-.markdown-body {
+div.markdown-body {
 	background: none;
+	margin: 0 auto;
 	--color-border-muted: #ffffff22;
 	--color-canvas-default: var(--color-surface-800);
 }
+
 .cm-editor {
 	height: 100%;
 	font-family: cursive, 'Source Code Pro', monospace;
 	background: var(--editor-bg);
+	max-width: 1200px;
 }
 .markdown-body code p {
 	margin: 0;
