--- a/src/style/theme.postcss
+++ b/src/style/theme.postcss
@@ -94,4 +94,6 @@
 	--color-surface-700: 55 68 107; /* ⬅ #37446b */
 	--color-surface-800: 44 54 86; /* ⬅ #2c3656 */
 	--color-surface-900: 36 44 70; /* ⬅ #242c46 */
+	/* editor */
+	--color-editor-bg: #1c1d20;
 }
