use locally unsaved changes in local storage

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -24,7 +24,12 @@ div.markdown-body {
 	--color-border-muted: #ffffff22;
 	--color-canvas-default: var(--color-surface-800);
 }
-
+.markdown-body ol,
+.markdown-body ul {
+	list-style: initial;
+	margin: initial;
+	padding: initial;
+}
 .cm-editor {
 	height: 100%;
 	font-family: cursive, 'Source Code Pro', monospace;
